Chapter 9 — Listing 9.4: TypeSelection.java Demonstrates: Choosing the right java.time type for each domain concept